sonarqube errors